--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ gradio = "^3.39.0"
 pymilvus = "^2.2.14"
 towhee = "^1.1.1"
 spacy = "^3.6.0"
+tables = "^3.8.0"
+openpyxl = "^3.1.2"
 
 
 [build-system]
