--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,12 @@ towhee = "^1.1.1"
 spacy = "^3.6.0"
 tables = "^3.8.0"
 openpyxl = "^3.1.2"
+protobuf = "^4.23.4"
+cpm-kernels = "^1.0.11"
+mdtex2html = "^1.2.0"
+sentencepiece = "^0.1.99"
+accelerate = "^0.21.0"
+torchvision = "^0.15.2"
 
 
 [build-system]
